tests/miniJava/pos/000743_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( new java ( ) ) java = 0 ; else if ( 0 ) { } else { } } }
