tests/miniJava/neg/001528_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = new 0 java ( ) ; } }
